[REFACTOR] sosoPicks db에서 해결하도록 서비스 로직 수정